--- a/Aperture/Info.plist
+++ b/Aperture/Info.plist
@@ -44,7 +44,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>26.0</string>
 	<key>LSUIElement</key>
-	<true/>
+	<false/>
 	<key>MetalCaptureEnabled</key>
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
